--- a/wa/wa11/gallery-start/style.css
+++ b/wa/wa11/gallery-start/style.css
@@ -12,9 +12,12 @@ body {
   position: relative;
   display: block;
   width: 640px;
-  height: 480px;
+  height: 640px;
 }
-
+img {
+  width:640px;
+  height:640px;
+}
 .overlay {
   position: absolute;
   top: 0;
@@ -38,6 +41,7 @@ button {
 .thumb-bar img {
   display: block;
   width: 20%;
+  height: 20%;
   float: left;
   cursor: pointer;
 }
