--- a/home/style.css
+++ b/home/style.css
@@ -1,7 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;1,400;1,500&display=swap');
 h1 {
     color:rgba(255,255,255,.75);
     font-family: "Open Sans";
     font-size: 15cqi;
+    font-style:italic;
     text-align: center;
+    margin-bottom: 25%;
+}
+h2 {
+    text-align: center;
+    font-family: "Open Sans";
+    color: #71BBFF;
+    font-size: 5cqi;
+}
+p {
+    font-size: 2cqi;
+    font-family: "Open Sans";
+    color: white;
+    background-color:  #71BBFF;
 }
