--- a/home/style.css
+++ b/home/style.css
@@ -27,16 +27,63 @@ img {
     flex: 2 1 auto;
     margin:10px;
 }
-.card {
-    width: 100%;
-    
-    padding: .5rem;
-    border-color: white;
-    background-color: antiquewhite;
-    box-shadow: 5px;
-  
-  }
-  .flex-bod{
+
+  .flex-box{
     display:flex;
-  
+    align-items:center;
+    justify-content: center;
+    min-height: 100vh;
+    
+  }
+  .wrapper{
+    margin:5%;
+    position:relative;
+  }
+  .wrapper i{
+    top:50%;
+    color:white;
+    background:#71BBFF;
+    height: 46px;
+    width: 46px;
+    cursor:pointer;
+    position:absolute;
+    font-size:1.2rem;
+    text-align: center;
+    line-height: 46px;
+    border-radius: 50%;
+    transform:translateY(-50%);
+  }
+  .wrapper i:first-child{
+    display:none;
+    left: -23px;
+  }
+  .wrapper i:last-child{
+    right: -23px;
+  }
+  .wrapper .carousel {
+    font-size: 0px;
+    cursor: pointer;
+    overflow: hidden;
+    white-space: nowrap;
+    scroll-behavior:smooth;
+
+  }
+  .carousel.dragging{
+    cursor: grab;
+    scroll-behavior: auto;
+  }
+  .carousel.dragging img{
+    pointer-events: none;
+  }
+  .carousel img{
+    height:640px;
+    width:640px;
+    object-fit: cover;
+    margin-left:14px;
+    
+
+  }
+  .carousel img:first-child{
+    margin-left:0px;
+
   }
