--- a/home/style.css
+++ b/home/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;1,400;1,500&display=swap');
+html:focus-within {
+    scroll-behavior: smooth;
+  }
 h1 {
     color:rgba(255,255,255,.85);
     font-family: "Open Sans";
@@ -60,6 +63,7 @@ img {
   .wrapper i:last-child{
     right: -23px;
   }
+  
   .wrapper .carousel {
     font-size: 0px;
     cursor: pointer;
