--- a/home/style.css
+++ b/home/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600&family=Open+Sans:ital,wght@0,400;0,500;1,400;1,500&display=swap');
 html:focus-within {
     scroll-behavior: smooth;
   }
 h1 {
     color:rgba(255,255,255,.85);
-    font-family: "Open Sans";
+    font-family: "Bodoni Moda";
     font-size: 15cqi;
     font-style:italic;
     text-align: center;
@@ -12,9 +12,10 @@ h1 {
 }
 h2 {
     text-align: center;
-    font-family: "Open Sans";
-    color: #71BBFF;
+    font-family: "Bodoni Moda";
+    color: rgb(32, 30, 30);
     font-size: 5cqi;
+    margin-bottom: 0;
 }
 h3 {
   text-align: center;
@@ -24,7 +25,7 @@ h3 {
 }
 p {
     margin: 0 5% 5% 5%;
-    font-size: 2cqi;
+    font-size: 1.5cqi;
     font-family: "Open Sans";
     color: #71BBFF;
     
