--- a/wa/wa12/wa12.css
+++ b/wa/wa12/wa12.css
@@ -1,3 +1,8 @@
+
+
+
+  @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:opsz,wght@6..96,600&family=Crimson+Pro:ital,wght@0,700;1,300&family=Open+Sans:ital,wght@0,400;0,500;1,400;1,500&display=swap');
+
 html {
     box-sizing: border-box;
   }
@@ -11,8 +16,7 @@ html {
   }
   
   body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    background-color: #c9bd95;
+    background-color: antiquewhite;
   }
   
   .app {
@@ -46,11 +50,15 @@ html {
   }
   
   .controls {
+    position: sticky;
+    bottom: 0px;
     width: 100%;
     padding: 20px 50px;
+    align-content: center;
   }
   
   .button {
+    font-family: 'Bodoni Moda';
     display: block;
     color: white;
     border-radius: 4px;
@@ -58,9 +66,9 @@ html {
     padding: 10px 20px;
     cursor: pointer;
     text-align: center;
-    width: 100%;
+    width:100%;
     font-size: 20px;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+   
   }
   
   .twitter {
@@ -85,6 +93,17 @@ html {
     background-color: #cccccc;
     color: #666666;
     cursor: not-allowed;
+  }
+ 
+  h1{
+    text-align: center;
+    font-family: "Crimson Pro";
+    font-weight:700;
+  }
+  h2 {
+    text-align: center;
+    font-family: "Crimson Pro";
+    font-weight: 300;
   }
   
   @media screen and (max-width: 600px) {
