cleaner js final

--- a/js-midterm/styles.css
+++ b/js-midterm/styles.css
@@ -1,12 +1,26 @@
-div{
-    display: flex;
-    height: 400px;
-    width: 800px;
-    line-height: 400px;
+
+
+#box {
+    padding: 10px;
+    border-radius: 15px;
+    display: auto;
+    margin: 30%;
+    margin-top: 0;
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.767);
 }
-
-h1 {
+#phoneNumber,h1 {
+    position:relative;
     font-size: 2cqi;
+    border-radius: 14px;
+    height:1cqi;
+    color:rgb(124,193,254,.85);
+    /*background-color: rgba(76, 190, 80, 0.85);*/
+    
+    
 
+}
+#phoneNumber {
+    font-size: 3cqi;
+    padding-bottom: 15px;
 }
