--- a/art/styles.css
+++ b/art/styles.css
@@ -1,3 +1,5 @@
+html { font-size: 20px;
+}
 body{
     background-color: black;
 }
@@ -6,4 +8,35 @@ canvas {
     position: absolute;
     left: 0;
     top: 0;
+}
+
+.card {
+  width: auto;
+ 
+ 
+
+}
+.card img {
+  max-width: 600px;
+  height: auto;
+  padding:0px;
+  border-color: white;
+  border-style: double;
+  border-width: 10px;
+  border-radius: 10px;
+}
+.cards {
+    max-width: 80%;
+    margin: 0 auto;
+    margin-top: 400px;
+    display: grid;
+    gap: .2rem;
+  }
+  @media (min-width: 1000px) {
+    .cards { grid-template-columns: repeat(2, 1fr); }
+    .card {
+        color: rgba(0,0,0,0);
+
+
+    }
   }
