--- a/styles.css
+++ b/styles.css
@@ -15,13 +15,16 @@ body{
       display: flex;
       justify-content: center;  /* Center horizontally */
       align-items: center;      /* Center vertically */
-      background-color: black;
+      background-color: rgba(0,0,0,0);
     }
 canvas {
     display: block;
     position: absolute;
     left: 0;
     top: 0;
+}
+.webgl {
+  z-index: -1 ;
 }
 
 .card {
@@ -115,8 +118,20 @@ canvas {
 
    
 
-    @keyframes blinker {
-      0% {color: #FFBF00; text-shadow: 0px 0px 20px #FFBF00;}
+  @keyframes blinker {
+       0% {color: #FFBF00; text-shadow: 0px 0px 20px #FFBF00;}
       50% { opacity: 0;}
       100% {color: #FFBF00;text-shadow: 0px 0px 20px #FFBF00;}
-    }
+  }
+
+  @keyframes fadeIn {
+  0% {
+    opacity: 0;
+    color:#FFBF00;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+
